--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -11,10 +11,10 @@ body {
     background-color: rgba(0, 0, 0, 0.864);
 }
 
-body{
-  background-color: $my-color;
-  // scssni ulash
-}
+// body{
+//   background-color: $my-color;
+//   // scssni ulash
+// }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
